[metadata]
name = dt
summary = DT is a distributed system testing framework for cloud native
description-file =
    README.md
home-page = https://github.com/tclh123/dt
author = Harry Lee
author-email = tclh123@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[pbr]
skip_authors = True
skip_changelog = True

[files]
packages =
    dt

[entry_points]
console_scripts =
    dt = dt.cli:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

